@@ -9,21 +9,24 @@ package org.gridsuite.study.server.service.dynamicsimulation;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.powsybl.commons.PowsyblException;
 import com.powsybl.timeseries.*;
+import org.gridsuite.study.server.StudyException;
+import org.gridsuite.study.server.dto.ComputationType;
+import org.gridsuite.study.server.dto.dynamicmapping.MappingInfos;
 import org.gridsuite.study.server.dto.dynamicmapping.ModelInfos;
 import org.gridsuite.study.server.dto.dynamicmapping.ModelVariableDefinitionInfos;
 import org.gridsuite.study.server.dto.dynamicmapping.VariablesSetInfos;
-import org.gridsuite.study.server.utils.elasticsearch.DisableElasticsearch;
-import org.gridsuite.study.server.StudyException;
-import org.gridsuite.study.server.dto.dynamicmapping.MappingInfos;
 import org.gridsuite.study.server.dto.dynamicsimulation.DynamicSimulationStatus;
 import org.gridsuite.study.server.dto.timeseries.TimeSeriesMetadataInfos;
+import org.gridsuite.study.server.dto.timeseries.TimelineEventInfos;
 import org.gridsuite.study.server.dto.timeseries.rest.TimeSeriesGroupRest;
 import org.gridsuite.study.server.dto.timeseries.rest.TimeSeriesMetadataRest;
 import org.gridsuite.study.server.service.NetworkModificationTreeService;
 import org.gridsuite.study.server.service.client.dynamicmapping.DynamicMappingClient;
 import org.gridsuite.study.server.service.client.dynamicsimulation.DynamicSimulationClient;
 import org.gridsuite.study.server.service.client.timeseries.TimeSeriesClient;
+import org.gridsuite.study.server.utils.elasticsearch.DisableElasticsearch;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -33,10 +36,11 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.context.junit4.SpringRunner;
 
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.stream.LongStream;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
@@ -129,19 +133,19 @@ public class DynamicSimulationServiceTest {
     @Before
     public void setup() {
         // setup networkModificationTreeService mock in all normal cases
-        given(networkModificationTreeService.getDynamicSimulationResultUuid(NODE_UUID)).willReturn(Optional.of(RESULT_UUID));
+        given(networkModificationTreeService.getComputationResultUuid(NODE_UUID, ComputationType.DYNAMIC_SIMULATION)).willReturn(Optional.of(RESULT_UUID));
     }
 
     @Test
     public void testRunDynamicSimulation() {
         // setup DynamicSimulationClient mock
-        given(dynamicSimulationClient.run(eq(""), eq(""), eq(NETWORK_UUID), eq(VARIANT_1_ID), any())).willReturn(RESULT_UUID);
+        given(dynamicSimulationClient.run(eq(""), eq(""), eq(NETWORK_UUID), eq(VARIANT_1_ID), any(), any())).willReturn(RESULT_UUID);
 
         // call method to be tested
-        UUID resultUuid = dynamicSimulationService.runDynamicSimulation("", "", NETWORK_UUID, VARIANT_1_ID, null);
+        UUID resultUuid = dynamicSimulationService.runDynamicSimulation("", "", NETWORK_UUID, VARIANT_1_ID, null, "testUserId");
 
         // check result
-        assertEquals(RESULT_UUID_STRING, resultUuid.toString());
+        assertThat(resultUuid).hasToString(RESULT_UUID_STRING);
     }
 
     @Test
@@ -162,10 +166,10 @@ public class DynamicSimulationServiceTest {
 
         // check result
         // metadata must be identical to expected
-        List<TimeSeriesMetadataInfos> expectedTimeSeriesMetadataList = timeSeriesGroupMetadata.getMetadatas().stream().map(TimeSeriesMetadataInfos::fromRest).collect(Collectors.toUnmodifiableList());
+        List<TimeSeriesMetadataInfos> expectedTimeSeriesMetadataList = timeSeriesGroupMetadata.getMetadatas().stream().map(TimeSeriesMetadataInfos::fromRest).toList();
         String expectedTimeSeriesMetadataListJson = objectMapper.writeValueAsString(expectedTimeSeriesMetadataList);
         String resultTimeSeriesMetadataListJson = objectMapper.writeValueAsString(resultTimeSeriesMetadataList);
-        assertEquals(objectMapper.readTree(expectedTimeSeriesMetadataListJson), objectMapper.readTree(resultTimeSeriesMetadataListJson));
+        assertThat(objectMapper.readTree(resultTimeSeriesMetadataListJson)).isEqualTo(objectMapper.readTree(expectedTimeSeriesMetadataListJson));
     }
 
     @Test
@@ -187,7 +191,7 @@ public class DynamicSimulationServiceTest {
 
         // check result
         // must contain two elements
-        assertEquals(2, timeSeriesResult.size());
+        assertThat(timeSeriesResult).hasSize(2);
     }
 
     @Test(expected = StudyException.class)
@@ -210,42 +214,84 @@ public class DynamicSimulationServiceTest {
     }
 
     @Test
-    public void testGetTimeLineResult() {
+    public void testGetTimelineResult() {
         // setup DynamicSimulationClient mock
-        given(dynamicSimulationClient.getTimeLineResult(RESULT_UUID)).willReturn(TIME_LINE_UUID);
+        given(dynamicSimulationClient.getTimelineResult(RESULT_UUID)).willReturn(TIME_LINE_UUID);
 
         // setup timeSeriesClient mock
         // timeline
-        TimeSeriesIndex index = new IrregularTimeSeriesIndex(new long[]{102479, 102479, 102479, 104396});
-        StringTimeSeries timeLine = TimeSeries.createString(TIME_LINE_NAME, index,
-                "CLA_2_5 - CLA : order to change topology",
-                "_BUS____2-BUS____5-1_AC - LINE : opening both sides",
-                "CLA_2_5 - CLA : order to change topology",
-                "CLA_2_4 - CLA : arming by over-current constraint");
-        given(timeSeriesClient.getTimeSeriesGroup(TIME_LINE_UUID, null)).willReturn(Arrays.asList(timeLine));
+        List<TimelineEventInfos> timelineEventInfosList = List.of(
+                new TimelineEventInfos(102479, "CLA_2_5", "CLA : order to change topology"),
+                new TimelineEventInfos(102479, "_BUS____2-BUS____5-1_AC", "LINE : opening both sides"),
+                new TimelineEventInfos(102479, "CLA_2_5", "CLA : order to change topology"),
+                new TimelineEventInfos(104396, "CLA_2_4", "CLA : arming by over-current constraint")
+        );
+
+        // convert timeline event list to StringTimeSeries
+        long[] timelineIndexes = timelineEventInfosList.stream().mapToLong(event -> (long) event.time()).toArray();
+        String[] timelineValues = timelineEventInfosList.stream().map(event -> {
+            try {
+                return objectMapper.writeValueAsString(event);
+            } catch (JsonProcessingException e) {
+                throw new PowsyblException("Error while serializing timeline event: " + event.toString(), e);
+            }
+        }).toArray(String[]::new);
+        List<TimeSeries> timelineSeries = List.of(TimeSeries.createString("timeline", new IrregularTimeSeriesIndex(timelineIndexes), timelineValues));
+
+        given(timeSeriesClient.getTimeSeriesGroup(TIME_LINE_UUID, null)).willReturn(timelineSeries);
 
         // call method to be tested
-        List<StringTimeSeries> timeLineResult = dynamicSimulationService.getTimeLineResult(NODE_UUID);
+        List<TimelineEventInfos> timelineResult = dynamicSimulationService.getTimelineResult(NODE_UUID);
 
         // check result
-        // must contain only one
-        assertEquals(1, timeLineResult.size());
+        // must contain 4 timeline events
+        assertThat(timelineResult).hasSize(4);
     }
 
-    @Test(expected = StudyException.class)
-    public void testGetTimeLineResultGivenBadType() {
+    @Test
+    public void testGetTimelineResultGivenBadType() throws JsonProcessingException {
         // setup DynamicSimulationClient mock
-        given(dynamicSimulationClient.getTimeLineResult(RESULT_UUID)).willReturn(TIME_LINE_UUID);
+        given(dynamicSimulationClient.getTimelineResult(RESULT_UUID)).willReturn(TIME_LINE_UUID);
 
         // setup timeSeriesClient mock
-        // create a bad type timeline
+        // --- create a bad type series --- //
         TimeSeriesIndex index = new IrregularTimeSeriesIndex(new long[]{102479, 102479, 102479, 104396});
-        List<TimeSeries> timeLines = List.of(TimeSeries.createDouble(TIME_SERIES_NAME_1, index, 333.847331, 333.847321, 333.847300, 333.847259));
+        List<TimeSeries> timelines = List.of(TimeSeries.createDouble(TIME_SERIES_NAME_1, index, 333.847331, 333.847321, 333.847300, 333.847259));
 
-        given(timeSeriesClient.getTimeSeriesGroup(TIME_LINE_UUID, null)).willReturn(timeLines);
+        given(timeSeriesClient.getTimeSeriesGroup(TIME_LINE_UUID, null)).willReturn(timelines);
 
         // call method to be tested
-        dynamicSimulationService.getTimeLineResult(NODE_UUID);
+        assertThatExceptionOfType(StudyException.class).isThrownBy(() ->
+            dynamicSimulationService.getTimelineResult(NODE_UUID)
+        ).withMessage("Timelines can not be a type: %s, expected type: %s",
+                timelines.get(0).getClass().getSimpleName(),
+                StringTimeSeries.class.getSimpleName());
+
+        // --- create bad type timeline events --- //
+        List<String> timelineEventInfosList = List.of(
+                "CLA : order to change topology",
+                "LINE : opening both sides",
+                "CLA : order to change topology",
+                "CLA : arming by over-current constraint"
+        );
+
+        // collect and convert timeline event list to StringTimeSeries
+        long[] timelineIndexes = LongStream.range(0, timelineEventInfosList.size()).toArray();
+        String[] timelineValues = timelineEventInfosList.stream().map(event -> {
+            try {
+                return objectMapper.writeValueAsString(event);
+            } catch (JsonProcessingException e) {
+                throw new PowsyblException("Error while serializing timeline event: " + event, e);
+            }
+        }).toArray(String[]::new);
+        timelines = List.of(TimeSeries.createString("timeline", new IrregularTimeSeriesIndex(timelineIndexes), timelineValues));
+
+        given(timeSeriesClient.getTimeSeriesGroup(TIME_LINE_UUID, null)).willReturn(timelines);
+
+        // call method to be tested
+        assertThatExceptionOfType(StudyException.class).isThrownBy(() ->
+            dynamicSimulationService.getTimelineResult(NODE_UUID)
+        ).withMessage("Error while deserializing timeline event: %s", objectMapper.writeValueAsString(timelineEventInfosList.get(0)));
     }
 
     @Test
@@ -258,34 +304,31 @@ public class DynamicSimulationServiceTest {
 
         // check result
         // status must be "CONVERGED"
-        assertEquals(DynamicSimulationStatus.CONVERGED, status);
+        assertThat(status).isEqualTo(DynamicSimulationStatus.CONVERGED);
     }
 
     @Test
     public void testInvalidateStatus() {
-        dynamicSimulationService.invalidateStatus(List.of(RESULT_UUID));
-        assertTrue(true);
+        assertDoesNotThrow(() -> dynamicSimulationService.invalidateStatus(List.of(RESULT_UUID)));
     }
 
     @Test
     public void testDeleteResult() {
-        dynamicSimulationService.deleteResult(RESULT_UUID);
-        assertTrue(true);
+        assertDoesNotThrow(() -> dynamicSimulationService.deleteResult(RESULT_UUID));
     }
 
     @Test
     public void testAssertDynamicSimulationNotRunning() {
 
         // test not running
-        dynamicSimulationService.assertDynamicSimulationNotRunning(NODE_UUID);
-        assertTrue(true);
+        assertDoesNotThrow(() -> dynamicSimulationService.assertDynamicSimulationNotRunning(NODE_UUID));
     }
 
     @Test(expected = StudyException.class)
     public void testAssertDynamicSimulationRunning() {
         // setup for running node
         given(dynamicSimulationClient.getStatus(RESULT_UUID_RUNNING)).willReturn(DynamicSimulationStatus.RUNNING);
-        given(networkModificationTreeService.getDynamicSimulationResultUuid(NODE_UUID_RUNNING)).willReturn(Optional.of(RESULT_UUID_RUNNING));
+        given(networkModificationTreeService.getComputationResultUuid(NODE_UUID_RUNNING, ComputationType.DYNAMIC_SIMULATION)).willReturn(Optional.of(RESULT_UUID_RUNNING));
 
         // test running
         dynamicSimulationService.assertDynamicSimulationNotRunning(NODE_UUID_RUNNING);
@@ -301,7 +344,7 @@ public class DynamicSimulationServiceTest {
 
         // check result
         // must return 2 mappings
-        assertEquals(MAPPINGS.size(), mappingInfos.size());
+        assertThat(mappingInfos).hasSameSizeAs(MAPPINGS);
     }
 
     @Test
@@ -314,6 +357,6 @@ public class DynamicSimulationServiceTest {
 
         // check result
         // must return 2 models
-        assertEquals(MODELS.size(), modelInfosList.size());
+        assertThat(modelInfosList).hasSameSizeAs(MODELS);
     }
 }
